{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 224,
  "lineage": "f3c41950-2480-30f4-84eb-7d0b8bc34c80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd7273bbe2496246",
            "arn": "arn:aws:ec2:us-west-1:891377273003:instance/i-01b6cdaf7a7546141",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b6cdaf7a7546141",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CariforniaKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4ef2c682dfd03ff",
            "private_dns": "ip-10-10-0-90.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.90",
            "public_ip": "13.52.239.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 450,
                "tags_all": {
                  "Cloud": "AWS",
                  "IAC": "Terraform",
                  "IAC_Version": "1.9.3",
                  "env": "california",
                  "owner": "Diego Rojas"
                },
                "throughput": 0,
                "volume_id": "vol-037a757049d011dd2",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c9c920ea1b015dd",
            "tags": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "ec2-california",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "ec2-california",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00765484fdb947470"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_california",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:internet-gateway/igw-0e3879e53a2ee1092",
            "id": "igw-0e3879e53a2ee1092",
            "owner_id": "891377273003",
            "tags": {
              "Name": "igw vpc california"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "igw vpc california",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "vpc_id": "vpc-0e77064ae6e695041"
          },
          "dependencies": [
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:route-table/rtb-085f6d699b53908ac",
            "id": "rtb-085f6d699b53908ac",
            "owner_id": "891377273003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3879e53a2ee1092",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "public crt",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e77064ae6e695041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b233931b17353602",
            "route_table_id": "rtb-085f6d699b53908ac",
            "subnet_id": "subnet-09c9c920ea1b015dd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:security-group/sg-00765484fdb947470",
            "description": "Allow SSH inbound and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00765484fdb947470",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Public instance SG",
            "name_prefix": "",
            "owner_id": "891377273003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "Public Instance SG",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e77064ae6e695041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:subnet/subnet-0db74dff59e8c0768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db74dff59e8c0768",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377273003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "private_subnet",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "vpc_id": "vpc-0e77064ae6e695041"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:subnet/subnet-09c9c920ea1b015dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9c920ea1b015dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377273003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "public_subnet",
              "env": "california",
              "owner": "Diego Rojas"
            },
            "vpc_id": "vpc-0e77064ae6e695041"
          },
          "dependencies": [
            "aws_vpc.vpc_california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:vpc/vpc-0e74e214676af9f72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02a256dce027effb1",
            "default_route_table_id": "rtb-0edba2288a27c3974",
            "default_security_group_id": "sg-0c36b23a93b07232e",
            "dhcp_options_id": "dopt-021bf6e85847d053d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e74e214676af9f72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edba2288a27c3974",
            "owner_id": "891377273003",
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "env": "california",
              "owner": "Diego Rojas"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_california",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377273003:vpc/vpc-0e77064ae6e695041",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-012f2800dda580947",
            "default_route_table_id": "rtb-03b1c152c5678e898",
            "default_security_group_id": "sg-0ea5db073f54812c9",
            "dhcp_options_id": "dopt-021bf6e85847d053d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e77064ae6e695041",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b1c152c5678e898",
            "owner_id": "891377273003",
            "tags": {
              "Name": "vpc_california"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.3",
              "Name": "vpc_california",
              "env": "california",
              "owner": "Diego Rojas"
            }
          }
        }
      ]
    }
  ]
}